--- a/views/pegawai.pug
+++ b/views/pegawai.pug
@@ -33,8 +33,8 @@ block main
                 td= pegawai.hutang_tempat_lain
                 td= pegawai.kelayakan
                 td.text-center
-                  button.btn.btn-sm.btn-success.mb-1(type='button' data-bs-toggle='modal' data-bs-target=`#modal-update-obj-${pegawai.id}` style='width: 100%;') Ubah
-                  button.btn.btn-sm.btn-danger.btn--trash-user(type='button' data-bs-toggle='modal' data-bs-target=`#modal-delete-obj-${pegawai.id}` style='width: 100%;') Hapus
+                  button.btn.btn-sm.btn-success.mb-1(type='button' data-bs-toggle='modal' data-bs-target=`#modal-update-pegawai-${pegawai.id}` style='width: 100%;') Ubah
+                  button.btn.btn-sm.btn-danger.btn--trash-user(type='button' data-bs-toggle='modal' data-bs-target=`#modal-delete-pegawai-${pegawai.id}` style='width: 100%;') Hapus
       // End Table Pegawai
 
   // Add Pegawai Modal
@@ -104,3 +104,21 @@ block main
           button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Cancel
           button#btn-submit-pegawai.btn.btn-primary(type='submit' form='form-add-pegawai') Submit
   // End Add Pegawai Modal
+
+  each pegawai in pegawaiObjArr
+    // Update Pegawai Modals
+    //- +updateDataModals(obj)
+
+    // Delete Pegawai Modals
+    .modal.fade(id=`modal-delete-pegawai-${pegawai.id}` data-bs-backdrop='static' data-bs-keyboard='false' tabindex='-1' aria-hidden='true')
+      .modal-dialog.modal-dialog-centered
+        .modal-content
+          .modal-header
+            h1.modal-title.fs-4 Konfirmasi Hapus
+            button.btn-close(type='button' data-bs-dismiss='modal' aria-label='Close')
+          .modal-body Anda yakin ingin menghapus data pegawai: 
+            span.fw-bold= pegawai.nama
+          .modal-footer
+            button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Cancel
+            button.btn.btn-danger(class='btn-delete-pegawai' type='button' data-obj-id=pegawai.id) Delete
+    //End Delete Pegawai Modals
