--- a/views/pegawai.pug
+++ b/views/pegawai.pug
@@ -37,6 +37,15 @@ block main
                   button.btn.btn-sm.btn-danger.btn--trash-user(type='button' data-bs-toggle='modal' data-bs-target=`#modal-delete-pegawai-${pegawai.id}` style='width: 100%;') Hapus
       // End Table Pegawai
 
+  //- Variables
+  - const jabatanOptionValues = ['Generalis', 'Officer Kinerja', 'TL Teknik', 'TL Rensis', 'Team Leader Administrasi dan Umum', 'TL SAR DAN YAN GAN', 'JTC  Pengaturan Operasi', 'Of Kinerja Transaksi Energi Listrik', 'Plt. Manager ULP', 'JO Pengendalian Piutang'];
+  - const masaKerjaOptionValues = ['< 1 Tahun', '1 - 3 Tahun', '4 - 6 Tahun', '7 - 10 Tahun', '> 10 Tahun'];
+  - const gradeGajiOptionValues = ['Grade 7 - 8', 'Grade 9 - 11', 'Grade 12 - 13'];
+  - const statusNikahOptionValues = ['Menikah', 'Belum Menikah', 'Cerai'];
+  - const jumlahAnakOptionValues = ['0 Anak', '1 - 2 Anak', '3 Anak', '> 3 Anak'];
+  - const hutangTempatLainOptionValues = ['Ya', 'Tidak'];
+  - const kelayakanOptionValues = ['Layak', 'Tidak Layak'];
+
   // Add Pegawai Modal
   #modal-add-pegawai.modal.fade(data-bs-backdrop='static' data-bs-keyboard='false' tabindex='-1' aria-hidden='true')
     .modal-dialog.modal-dialog-scrollable
@@ -53,53 +62,38 @@ block main
             .col-12.mb-3
               label.form-label(for='add-jabatan') Jabatan
               select#add-jabatan.form-select
-                option(value='Generalis') Generalis
-                option(value='Officer Kinerja') Officer Kinerja
-                option(value='TL Teknik') TL Teknik
-                option(value='TL Rensis') TL Rensis
-                option(value='Team Leader Administrasi dan Umum') Team Leader Administrasi dan Umum
-                option(value='TL SAR DAN YAN GAN') TL SAR DAN YAN GAN
-                option(value='JTC  Pengaturan Operasi') JTC  Pengaturan Operasi
-                option(value='Of Kinerja Transaksi Energi Listrik') Of Kinerja Transaksi Energi Listrik
-                option(value='Plt. Manager ULP') Plt. Manager ULP
-                option(value='JO Pengendalian Piutang') JO Pengendalian Piutang
+                each jabatan in jabatanOptionValues
+                  option(value=jabatan)= jabatan
             .col-12.mb-3
               label.form-label(for='add-masa_kerja') Masa Kerja
               select#add-masa_kerja.form-select
-                option(value='< 1 Tahun')= '< 1 Tahun'
-                option(value='1 - 3 Tahun') 1 - 3 Tahun
-                option(value='4 - 6 Tahun') 4 - 6 Tahun
-                option(value='7 - 10 Tahun') 7 - 10 Tahun
-                option(value='> 10 Tahun')= '> 10 Tahun'
+                each masa_kerja in masaKerjaOptionValues
+                  option(value=masa_kerja)= masa_kerja
             .col-12.mb-3
               label.form-label(for='add-grade_gaji') Grade Gaji
               select#add-grade_gaji.form-select
-                option(value='Grade 7 - 9') Grade 7 - 9
-                option(value='Grade 9 - 11') Grade 9 - 11
-                option(value='Grade 11 - 13') Grade 11 - 13
+                each grade_gaji in gradeGajiOptionValues
+                  option(value=grade_gaji)= grade_gaji
             .col-12.mb-3
               label.form-label(for='add-status_nikah') Status Nikah
               select#add-status_nikah.form-select
-                option(value='Menikah') Menikah
-                option(value='Belum Menikah') Belum Menikah
-                option(value='Cerai') Cerai
+                each status_nikah in statusNikahOptionValues
+                  option(value=status_nikah)= status_nikah
             .col-12.mb-3
               label.form-label(for='add-jumlah_anak') Jumlah Anak
               select#add-jumlah_anak.form-select
-                option(value='0 Anak') 0 Anak
-                option(value='1 - 2 Anak') 1 - 2 Anak
-                option(value='3 Anak') 3 Anak
-                option(value='> 3 Anak')= '> 3 Anak'
+                each jumlah_anak in jumlahAnakOptionValues
+                  option(value=jumlah_anak)= jumlah_anak
             .col-12.mb-3
               label.form-label(for='add-hutang_tempat_lain') Hutang Tempat Lain
               select#add-hutang_tempat_lain.form-select
-                option(value='Ya') Ya
-                option(value='Tidak') Tidak
+                each hutang_tempat_lain in hutangTempatLainOptionValues
+                  option(value=hutang_tempat_lain)= hutang_tempat_lain
             .col-12.mb-3
               label.form-label(for='add-kelayakan') Kelayakan
               select#add-kelayakan.form-select
-                option(value='Layak') Layak
-                option(value='Tidak Layak') Tidak Layak
+                each kelayakan in kelayakanOptionValues
+                  option(value=kelayakan)= kelayakan
         .modal-footer
           button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Cancel
           button#btn-submit-pegawai.btn.btn-primary(type='submit' form='form-add-pegawai') Submit
@@ -107,7 +101,77 @@ block main
 
   each pegawai in pegawaiObjArr
     // Update Pegawai Modals
-    //- +updateDataModals(obj)
+    .modal.fade(id=`modal-update-pegawai-${pegawai.id}` data-bs-backdrop='static' data-bs-keyboard='false' tabindex='-1' aria-hidden='true')
+      .modal-dialog.modal-dialog-scrollable
+        .modal-content
+          .modal-header
+            h1.modal-title.fs-4 Update Data Pegawai
+            button.btn-close(type='button' data-bs-dismiss='modal' aria-label='Close')
+          .modal-body
+            form.row(id=`form-update-pegawai-${pegawai.id}` novalidate data-obj-id=pegawai.id)
+              .col-12.mb-3
+                label.form-label(for='update-nama') Nama
+                input#update-nama.form-control(type='text' name='nama' value=pegawai.nama required)
+                .invalid-feedback Masukkan nama pegawai
+              .col-12.mb-3
+                label.form-label(for='update-jabatan') Jabatan
+                select#update-jabatan.form-select
+                  each jabatan in jabatanOptionValues
+                    if jabatan === pegawai.jabatan
+                      option(value=jabatan selected)= jabatan
+                    else
+                      option(value=jabatan)= jabatan
+              .col-12.mb-3
+                label.form-label(for='update-masa_kerja') Masa Kerja
+                select#update-masa_kerja.form-select
+                  each masa_kerja in masaKerjaOptionValues
+                    if masa_kerja === pegawai.masa_kerja
+                      option(value=masa_kerja selected)= masa_kerja
+                    else
+                      option(value=masa_kerja)= masa_kerja
+              .col-12.mb-3
+                label.form-label(for='update-grade_gaji') Grade Gaji
+                select#update-grade_gaji.form-select
+                  each grade_gaji in gradeGajiOptionValues
+                    if grade_gaji === pegawai.grade_gaji
+                      option(value=grade_gaji selected)= grade_gaji
+                    else
+                      option(value=grade_gaji)= grade_gaji
+              .col-12.mb-3
+                label.form-label(for='update-status_nikah') Status Nikah
+                select#update-status_nikah.form-select
+                  each status_nikah in statusNikahOptionValues
+                    if status_nikah === pegawai.status_nikah
+                      option(value=status_nikah selected)= status_nikah
+                    else
+                      option(value=status_nikah)= status_nikah
+              .col-12.mb-3
+                label.form-label(for='update-jumlah_anak') Jumlah Anak
+                select#update-jumlah_anak.form-select
+                  each jumlah_anak in jumlahAnakOptionValues
+                    if jumlah_anak === pegawai.jumlah_anak
+                      option(value=jumlah_anak selected)= jumlah_anak
+                    else
+                      option(value=jumlah_anak)= jumlah_anak
+              .col-12.mb-3
+                label.form-label(for='update-hutang_tempat_lain') Hutang Tempat Lain
+                select#update-hutang_tempat_lain.form-select
+                  each hutang_tempat_lain in hutangTempatLainOptionValues
+                    if hutang_tempat_lain === pegawai.hutang_tempat_lain
+                      option(value=hutang_tempat_lain selected)= hutang_tempat_lain
+                    else
+                      option(value=hutang_tempat_lain)= hutang_tempat_lain
+              .col-12.mb-3
+                label.form-label(for='update-kelayakan') Kelayakan
+                select#update-kelayakan.form-select
+                  each kelayakan in kelayakanOptionValues
+                    if kelayakan === pegawai.kelayakan
+                      option(value=kelayakan selected)= kelayakan
+                    else
+                      option(value=kelayakan)= kelayakan
+          .modal-footer
+            button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Cancel
+            button.btn.btn-info(class=`btn-update-pegawai` type='submit' form=`form-update-pegawai-${pegawai.id}`) Update
 
     // Delete Pegawai Modals
     .modal.fade(id=`modal-delete-pegawai-${pegawai.id}` data-bs-backdrop='static' data-bs-keyboard='false' tabindex='-1' aria-hidden='true')
